--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "scripts": "gulp scripts",
     "debug.server": "node-debug server_dist/server.js",
     "typings": "typings",
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "node-debug": "node-debug"
   },
   "author": "Jaroost",
   "license": "MIT",
   "devDependencies": {
+    "es6-promise": "^3.1.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-typescript": "^2.13.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "node-inspector": "^0.12.8",
+    "rimraf": "^2.5.2",
     "ts-node": "^0.7.1",
     "typescript": "^1.8.9",
     "typings": "^0.7.12"
