--- a/package.json
+++ b/package.json
@@ -13,14 +13,23 @@
   "author": "Jaroost",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.12.5",
+    "connect-history-api-fallback": "^1.2.0",
     "es6-promise": "^3.1.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-load-plugins": "^1.2.2",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-typescript": "^2.13.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.5",
+    "isstream": "^0.1.2",
+    "merge-stream": "^1.0.0",
     "node-inspector": "^0.12.8",
     "rimraf": "^2.5.2",
+    "run-sequence": "^1.1.5",
     "ts-node": "^0.7.1",
     "typescript": "^1.8.9",
     "typings": "^0.7.12"
