--- a/package.json
+++ b/package.json
@@ -35,8 +35,13 @@
     "typings": "^0.7.12"
   },
   "dependencies": {
+    "angular2": "^2.0.0-beta.17",
     "chalk": "^1.1.3",
-    "express": "^4.13.4"
+    "es6-shim": "^0.35.0",
+    "express": "^4.13.4",
+    "reflect-metadata": "^0.1.2",
+    "rxjs": "^5.0.0-beta.6",
+    "zone.js": "^0.6.12"
   },
   "//": [
     "This is a comments section!",
