--- a/package.json
+++ b/package.json
@@ -13,35 +13,42 @@
   "author": "Jaroost",
   "license": "MIT",
   "devDependencies": {
-    "browser-sync": "^2.12.5",
-    "connect-history-api-fallback": "^1.2.0",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-load-plugins": "^1.2.2",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-typescript": "^2.13.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.5",
-    "isstream": "^0.1.2",
-    "merge-stream": "^1.0.0",
-    "node-inspector": "^0.12.8",
-    "rimraf": "^2.5.2",
-    "run-sequence": "^1.1.5",
-    "ts-node": "^0.7.1",
-    "typescript": "^1.8.9",
-    "typings": "^0.7.12"
+    "browser-sync": "*",
+    "connect-history-api-fallback": "*",
+    "gulp": "*",
+    "gulp-concat": "*",
+    "gulp-load-plugins": "*",
+    "gulp-plumber": "*",
+    "gulp-sourcemaps": "*",
+    "gulp-typescript": "*",
+    "gulp-uglify": "*",
+    "gulp-util": "*",
+    "gulp-watch": "*",
+    "isstream": "*",
+    "merge-stream": "*",
+    "node-inspector": "*",
+    "rimraf": "*",
+    "run-sequence": "*",
+    "ts-node": "*",
+    "typescript": "*",
+    "typings": "*"
   },
   "dependencies": {
-    "angular2": "^2.0.0-beta.17",
-    "chalk": "^1.1.3",
-    "es6-shim": "^0.35.0",
-    "express": "^4.13.4",
-    "reflect-metadata": "^0.1.2",
-    "rxjs": "^5.0.0-beta.6",
-    "systemjs": "^0.19.27",
-    "zone.js": "^0.6.12"
+    "@angular/common": "*",
+    "@angular/compiler": "*",
+    "@angular/core": "*",
+    "@angular/http": "*",
+    "@angular/platform-browser": "*",
+    "@angular/platform-browser-dynamic": "*",
+    "@angular/router": "*",
+    "chalk": "*",
+    "es6-promise": "*",
+    "es6-shim": "*",
+    "express": "*",
+    "reflect-metadata": "*",
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "*",
+    "zone.js": "*"
   },
   "//": [
     "This is a comments section!",
