Add proxy to browsersync  to the express server on 3002 port
Add proxy to browsersync to routes request from localhost:3000/api to localhost:3002

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "isstream": "*",
     "merge-stream": "*",
     "node-inspector": "*",
+    "proxy-middleware": "*",
     "rimraf": "*",
     "run-sequence": "*",
     "ts-node": "*",
