Remove the fixed version of package in package.json

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browser-sync": "*",
     "connect-history-api-fallback": "*",
     "gulp": "*",
+    "gulp-cached": "*",
     "gulp-concat": "*",
     "gulp-load-plugins": "*",
     "gulp-nodemon": "*",
@@ -49,9 +50,9 @@
     "es6-promise": "*",
     "es6-shim": "*",
     "express": "*",
-    "lodash": "^4.12.0",
+    "lodash": "*",
     "reflect-metadata": "*",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "*",
     "systemjs": "*",
     "zone.js": "*"
   },
