--- a/package.json
+++ b/package.json
@@ -46,8 +46,16 @@
     "@angular/http": "*",
     "@angular/platform-browser": "*",
     "@angular/platform-browser-dynamic": "*",
-    "@angular/router": "*",
+    "@angular/router": "2.0.0-rc.1",
     "@angular/router-deprecated": "*",
+    "@angular2-material/button": "*",
+    "@angular2-material/checkbox": "^2.0.0-alpha.5",
+    "@angular2-material/core": "*",
+    "@angular2-material/progress-bar": "^2.0.0-alpha.5",
+    "@angular2-material/progress-circle": "^2.0.0-alpha.5",
+    "@angular2-material/radio": "^2.0.0-alpha.5",
+    "@angular2-material/sidenav": "^2.0.0-alpha.5",
+    "@angular2-material/toolbar": "^2.0.0-alpha.5",
     "angular2-jwt": "*",
     "chalk": "*",
     "es6-promise": "*",
@@ -55,6 +63,7 @@
     "express": "*",
     "express-jwt": "*",
     "lodash": "*",
+    "ng2-material": "^0.4.1",
     "reflect-metadata": "*",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "*",
