--- a/package.json
+++ b/package.json
@@ -48,14 +48,14 @@
     "@angular/platform-browser-dynamic": "*",
     "@angular/router": "2.0.0-rc.1",
     "@angular/router-deprecated": "*",
-    "@angular2-material/button": "*",
-    "@angular2-material/checkbox": "^2.0.0-alpha.5",
-    "@angular2-material/core": "*",
-    "@angular2-material/progress-bar": "^2.0.0-alpha.5",
-    "@angular2-material/progress-circle": "^2.0.0-alpha.5",
-    "@angular2-material/radio": "^2.0.0-alpha.5",
-    "@angular2-material/sidenav": "^2.0.0-alpha.5",
-    "@angular2-material/toolbar": "^2.0.0-alpha.5",
+    "@angular2-material/button": "2.0.0-alpha.4",
+    "@angular2-material/checkbox": "2.0.0-alpha.4",
+    "@angular2-material/core": "2.0.0-alpha.4",
+    "@angular2-material/progress-bar": "2.0.0-alpha.4",
+    "@angular2-material/progress-circle": "2.0.0-alpha.4",
+    "@angular2-material/radio": "2.0.0-alpha.4",
+    "@angular2-material/sidenav": "2.0.0-alpha.4",
+    "@angular2-material/toolbar": "2.0.0-alpha.4",
     "angular2-jwt": "*",
     "chalk": "*",
     "es6-promise": "*",
