--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
     "typings": "*"
   },
   "dependencies": {
-    "@angular/common": "*",
-    "@angular/compiler": "*",
-    "@angular/core": "*",
-    "@angular/http": "*",
-    "@angular/platform-browser": "*",
-    "@angular/platform-browser-dynamic": "*",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
-    "@angular/router-deprecated": "*",
+    "@angular/router-deprecated": "2.0.0-rc.1",
     "@angular2-material/button": "2.0.0-alpha.4",
     "@angular2-material/checkbox": "2.0.0-alpha.4",
     "@angular2-material/core": "2.0.0-alpha.4",
