--- a/package.json
+++ b/package.json
@@ -63,8 +63,9 @@
     "express": "*",
     "express-jwt": "*",
     "lodash": "*",
+    "mysql": "^2.10.2",
     "ng2-material": "^0.4.1",
-    "reflect-metadata": "*",
+    "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "*",
     "zone.js": "*"
