--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
     "@angular/router": "3.0.0-rc.1", 
     "@angular/router-deprecated": "2.0.0-rc.2", 
     "@angular/upgrade": "2.0.0-rc.5", 
-    "@angular2-material/button": "2.0.0-alpha.7-2", 
-    "@angular2-material/checkbox": "2.0.0-alpha.7-2", 
-    "@angular2-material/core": "2.0.0-alpha.7-2", 
-    "@angular2-material/progress-bar": "2.0.0-alpha.7-2", 
-    "@angular2-material/progress-circle": "2.0.0-alpha.7-2", 
-    "@angular2-material/radio": "2.0.0-alpha.7-2", 
-    "@angular2-material/sidenav": "2.0.0-alpha.7-2", 
-    "@angular2-material/toolbar": "2.0.0-alpha.7-2",
+    "@angular2-material/button": "2.0.0-alpha.5-2", 
+    "@angular2-material/checkbox": "2.0.0-alpha.5-2", 
+    "@angular2-material/core": "2.0.0-alpha.5-2", 
+    "@angular2-material/progress-bar": "2.0.0-alpha.5-2", 
+    "@angular2-material/progress-circle": "2.0.0-alpha.5-2", 
+    "@angular2-material/radio": "2.0.0-alpha.5-2", 
+    "@angular2-material/sidenav": "2.0.0-alpha.5-2", 
+    "@angular2-material/toolbar": "2.0.0-alpha.5-2",
     "angular2-jwt": "*",
+    "auth0-lock":"*",
     "chalk": "*",
     "es6-promise": "*",
     "es6-shim": "*",
@@ -47,6 +48,7 @@
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "*",
+    "traceur": "*",
     "zone.js": "*",
 
     "browser-sync": "*",
