Update for auth0

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@angular2-material/sidenav": "2.0.0-alpha.7-2", 
     "@angular2-material/toolbar": "2.0.0-alpha.7-2",
     "@angular2-material/icon": "2.0.0-alpha.7-2",
+    "@angular2-material/grid-list": "2.0.0-alpha.7-2",
     "angular2-jwt": "*",
+    "auth0-lock": "*",
     "chalk": "*",
     "es6-promise": "*",
     "es6-shim": "*",
