--- a/package.json
+++ b/package.json
@@ -40,15 +40,11 @@
     "angular2-jwt": "*",
     "auth0-lock": "*",
     "chalk": "*",
-    "es6-promise": "*",
-    "es6-shim": "*",
     "express": "*",
     "express-jwt": "*",
-    "lodash": "*",
-    "mysql": "^2.10.2",
-    "ng2-material": "^0.4.1",
+    "core-js": "*",
     "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "5.0.0-beta.11",
     "systemjs": "*",
     "zone.js": "*",
 
