--- a/package.json
+++ b/package.json
@@ -17,26 +17,35 @@
     
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5", 
-    "@angular/compiler": "2.0.0-rc.5", 
-    "@angular/core": "2.0.0-rc.5", 
-    "@angular/forms": "0.3.0", 
-    "@angular/http": "2.0.0-rc.5", 
-    "@angular/platform-browser": "2.0.0-rc.5", 
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5", 
-    "@angular/router": "3.0.0-rc.1", 
-    "@angular/router-deprecated": "2.0.0-rc.2", 
-    "@angular/upgrade": "2.0.0-rc.5", 
-    "@angular2-material/button": "2.0.0-alpha.7-2", 
-    "@angular2-material/checkbox": "2.0.0-alpha.7-2", 
-    "@angular2-material/core": "2.0.0-alpha.7-2", 
-    "@angular2-material/progress-bar": "2.0.0-alpha.7-2", 
-    "@angular2-material/progress-circle": "2.0.0-alpha.7-2", 
-    "@angular2-material/radio": "2.0.0-alpha.7-2", 
-    "@angular2-material/sidenav": "2.0.0-alpha.7-2", 
-    "@angular2-material/toolbar": "2.0.0-alpha.7-2",
-    "@angular2-material/icon": "2.0.0-alpha.7-2",
-    "@angular2-material/grid-list": "2.0.0-alpha.7-2",
+    "@angular/common": "2.0.0-rc.7",
+    "@angular/compiler": "2.0.0-rc.7",
+    "@angular/compiler-cli": "0.6.1",
+    "@angular/core": "2.0.0-rc.7",
+    "@angular/forms": "2.0.0-rc.7",
+    "@angular/http": "2.0.0-rc.7",
+    "@angular/platform-browser": "2.0.0-rc.7",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.7",
+    "@angular/router": "3.0.0-rc.3",
+    "@angular/upgrade": "2.0.0-rc.7",
+    "@angular2-material/button": "2.0.0-alpha.8-1",
+    "@angular2-material/button-toggle": "2.0.0-alpha.8-1",
+    "@angular2-material/card": "2.0.0-alpha.8-1",
+    "@angular2-material/checkbox": "2.0.0-alpha.8-1",
+    "@angular2-material/core": "2.0.0-alpha.8-1",
+    "@angular2-material/grid-list": "2.0.0-alpha.8-1",
+    "@angular2-material/icon": "2.0.0-alpha.8-1",
+    "@angular2-material/input": "2.0.0-alpha.8-1",
+    "@angular2-material/list": "2.0.0-alpha.8-1",
+    "@angular2-material/menu": "2.0.0-alpha.8-1",
+    "@angular2-material/progress-bar": "2.0.0-alpha.8-1",
+    "@angular2-material/progress-circle": "2.0.0-alpha.8-1",
+    "@angular2-material/radio": "2.0.0-alpha.8-1",
+    "@angular2-material/sidenav": "2.0.0-alpha.8-1",
+    "@angular2-material/slide-toggle": "2.0.0-alpha.8-1",
+    "@angular2-material/slider": "2.0.0-alpha.8-1",
+    "@angular2-material/tabs": "2.0.0-alpha.8-1",
+    "@angular2-material/toolbar": "2.0.0-alpha.8-1",
+    "@angular2-material/tooltip": "2.0.0-alpha.8-1",
     "angular2-jwt": "*",
     "auth0-lock": "*",
     "chalk": "*",
@@ -58,7 +67,7 @@
     "gulp-plumber": "*",
     "gulp-shell": "*",
     "gulp-sourcemaps": "*",
-    "gulp-typescript": "*",
+    "gulp-typescript": "^2.13.6",
     "gulp-uglify": "*",
     "gulp-util": "*",
     "gulp-watch": "*",
@@ -70,7 +79,7 @@
     "run-sequence": "*",
     "ts-node": "*",
     "tslint": "*",
-    "typescript": "*",
+    "typescript": "^2.0.2",
     "typings": "*"
   },
   "//": [
