--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,27 @@
 {
-	"compilerOptions": {
-	    "target": "es5",
-	    "moduleResolution": "node",
-	    "sourceMap": true,
-	    "emitDecoratorMetadata": true,
-	    "experimentalDecorators": true,
-	    "removeComments": false,
-	    "noImplicitAny": false
-	  },
-	"exclude": [
-		"node_modules",
-		"typings/main",
-		"typings/main.d.ts"
-	]
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "declaration": false,
+    "removeComments": true,
+    "noLib": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "sourceMap": true,
+    "pretty": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitUseStrict": false,
+    "noFallthroughCasesInSwitch": true
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "typings/index.d.ts",
+    "typings/modules",
+    "src"
+  ],
+  "compileOnSave": false
 }
