--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.7",
     "@angular/router": "3.0.0-rc.3",
     "@angular/upgrade": "2.0.0-rc.7",
+
     "@angular2-material/button": "2.0.0-alpha.8-1",
     "@angular2-material/button-toggle": "2.0.0-alpha.8-1",
     "@angular2-material/card": "2.0.0-alpha.8-1",
@@ -51,11 +52,12 @@
     "chalk": "*",
     "express": "*",
     "express-jwt": "*",
+
     "core-js": "*",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.11",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.12",
     "systemjs": "*",
-    "zone.js": "*",
+    "zone.js": "^0.6.21",
 
     "browser-sync": "*",
     "connect-history-api-fallback": "*",
